--- a/translations/ar.json
+++ b/translations/ar.json
@@ -173,29 +173,29 @@
       "resetAll": "إعادة تعيين جميع المعايير"
     },
     "fields": {
-      "nationality": "الجنسية",
-      "origin": "الأصل",
-      "country": "الدولة",
-      "city": "المدينة",
-      "ageRange": "الفئة العمرية",
-      "minAge": "الحد الأدنى للعمر",
-      "maxAge": "الحد الأقصى للعمر",
-      "educationalLevel": "المستوى التعليمي",
-      "specialization": "التخصص",
-      "employmentStatus": "الحالة الوظيفية",
-      "jobTitle": "المسمى الوظيفي",
-      "financialStatus": "الوضع المالي",
-      "marriageBudget": "ميزانية الزواج",
-      "height": "الطول",
-      "weight": "الوزن",
-      "maritalStatus": "الحالة الاجتماعية",
-      "socialMediaPresence": "التواجد على وسائل التواصل الاجتماعي",
-      "smokingStatus": "حالة التدخين",
-      "drinkingStatus": "حالة شرب الكحول",
-      "sportsActivity": "النشاط الرياضي",
-      "sleepHabit": "عادات النوم",
-      "pets": "الحيوانات الأليفة",
-      "religiosityLevel": "مستوى التدين"
+      "nationality": "جنسية الشريك",
+      "origin": "أصل الشريك",
+      "country": "دولة الشريك",
+      "city": "مدينة الشريك",
+      "ageRange": "الفئة العمرية للشريك",
+      "minAge": "الحد الأدنى لعمر الشريك",
+      "maxAge": "الحد الأقصى لعمر الشريك",
+      "educationalLevel": "المستوى التعليمي للشريك",
+      "specialization": "تخصص الشريك",
+      "employmentStatus": "الحالة الوظيفية للشريك",
+      "jobTitle": "المسمى الوظيفي للشريك",
+      "financialStatus": "الوضع المالي للشريك",
+      "marriageBudget": "ميزانية الزواج للشريك",
+      "height": "طول الشريك",
+      "weight": "وزن الشريك",
+      "maritalStatus": "الحالة الاجتماعية للشريك",
+      "socialMediaPresence": "تواجد الشريك على وسائل التواصل الاجتماعي",
+      "smokingStatus": "حالة التدخين للشريك",
+      "drinkingStatus": "حالة شرب الكحول للشريك",
+      "sportsActivity": "نشاط الشريك الرياضي",
+      "sleepHabit": "عادات النوم للشريك",
+      "pets": "الحيوانات الأليفة للشريك",
+      "religiosityLevel": "مستوى التدين للشريك"
     },
     "placeholders": {
       "nationality": "اختر الجنسية (اختياري)",
@@ -526,7 +526,6 @@
     "country_of_residence": "البلد",
     "city": "المدينة",
     "date_of_birth": "تاريخ الميلاد",
-    "zodiac_sign": "برج الأبراج",
     "educational_level": "التعليم",
     "specialization": "التخصص",
     "employment_status": "حالة التوظيف",
@@ -629,7 +628,9 @@
       "hijab_error": "الرجاء اختيار تفضيل الحجاب",
       "date_of_birth": "تاريخ الميلاد",
       "guardian_contact": "معلومات الاتصال بالولي",
-      "guardian_contact_placeholder": "أدخل رقم الهاتف"
+      "guardian_contact_placeholder": "أدخل الاسم المستعار",
+      "nick_name_placeholder": "أدخل رقم الهاتف",
+      "nick_name": "الاسم المستعار"
     },
 
     "cards": {
@@ -713,7 +714,6 @@
       "financial_status": "الوضع المالي 💵",
       "housing_status": "وضع السكن 🏠",
       "social_media": "وجود وسائل التواصل الاجتماعي 📱",
-      "zodiac_sign": "برج الأبراج ✨",
       "car_ownership": "ملكية السيارة 🚗",
       "cards": {
         "educational_background": "الخلفية التعليمية",
