--- a/translations/en.json
+++ b/translations/en.json
@@ -160,29 +160,29 @@
       "religiosityLevel": "Select religiosity level (optional)"
     },
     "fields": {
-      "nationality": "Nationality",
-      "origin": "Origin",
-      "country": "Country",
-      "city": "City",
-      "ageRange": "Age Range",
-      "minAge": "Min Age",
-      "maxAge": "Max Age",
-      "educationalLevel": "Educational Level",
-      "specialization": "Specialization",
-      "employmentStatus": "Employment Status",
-      "jobTitle": "Job Title",
-      "financialStatus": "Financial Status",
-      "marriageBudget": "Marriage Budget",
-      "height": "Height",
-      "weight": "Weight",
-      "maritalStatus": "Marital Status",
-      "socialMediaPresence": "Social Media Presence",
-      "smokingStatus": "Smoking Status",
-      "drinkingStatus": "Drinking Status",
-      "sportsActivity": "Sports Activity",
-      "sleepHabit": "Sleep Habit",
-      "pets": "Pets",
-      "religiosityLevel": "Religiosity Level"
+      "nationality": "Partner Nationality",
+      "origin": "Partner Origin",
+      "country": "Partner Country",
+      "city": "Partner City",
+      "ageRange": "Partner Age Range",
+      "minAge": "Partner Min Age",
+      "maxAge": "Partner Max Age",
+      "educationalLevel": "Partner Educational Level",
+      "specialization": "Partner Specialization",
+      "employmentStatus": "Partner Employment Status",
+      "jobTitle": "Partner Job Title",
+      "financialStatus": "Partner Financial Status",
+      "marriageBudget": "Partner Marriage Budget",
+      "height": "Partner Height",
+      "weight": "Partner Weight",
+      "maritalStatus": "Partner Marital Status",
+      "socialMediaPresence": "Partner Social Media Presence",
+      "smokingStatus": "Partner Smoking Status",
+      "drinkingStatus": "Partner Drinking Status",
+      "sportsActivity": "Partner Sports Activity",
+      "sleepHabit": "Partner Sleep Habit",
+      "pets": "Partner Pets",
+      "religiosityLevel": "Partner Religiosity Level"
     },
     "info": { "selectFilters": "Select Filters " }
   },
@@ -510,7 +510,6 @@
     "country": "Country",
     "city": "City",
     "date_of_birth": "Date of Birth",
-    "zodiac_sign": "Zodiac Sign",
     "educational_level": "Education",
     "specialization": "Specialization",
     "employment_status": "Employment Status",
@@ -548,7 +547,9 @@
       "hijab_error": "Please select your hijab preference",
       "date_of_birth": "Date of Birth",
       "guardian_contact": "Guardian Contact",
-      "guardian_contact_placeholder": "Enter phone number"
+      "guardian_contact_placeholder": "Enter phone number",
+      "nick_name_placeholder": "Enter Your Nick Name",
+      "nick_name": "Nick Name "
     },
     "gender": {
       "male": "Male",
@@ -681,7 +682,6 @@
       "financial_status": "Financial Status 💵",
       "housing_status": "Housing Status 🏠",
       "social_media": "Social Media Presence 📱",
-      "zodiac_sign": "Zodiac Sign ✨",
       "car_ownership": "Car Ownership 🚗",
       "cards": {
         "educational_background": "Educational Background",
